5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1596_2895.log
== SUBMITION (2019-03-26 18:44:04) 
-- CODE:
jogos=float(input("quantidade")
jogos=float(input("valor unitario"))
jogos=float(input("valor do frete"))
total= quantidade * valor unitario * valor do frete
print(total)
-- EXECUTION TIME:
0.124506
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    jogos=float(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:07) 
-- CODE:
jogos=float(input("quantidade")
jogos=float(input("valor unitario"))
jogos=float(input("valor do frete"))
total= quantidade * valor unitario * valor do frete
print(total)
-- ERROR:
File "XXXX", line 2
    jogos=float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:43) 
-- CODE:
jogos=float(input("quantidade")
jogos=float(input("valor unitario"))
jogos=float(input("valor do frete"))
total= quantidade * valor unitario * valor do frete
print(total)
-- ERROR:
File "XXXX", line 2
    jogos=float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:46:25) 
-- CODE:
jogos1=float(input("quantidade")
jogos=float(input("valor unitario"))
jogos=float(input("valor do frete"))
total= quantidade * valor unitario + valor do frete
print(total)
-- EXECUTION TIME:
0.217828
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    jogos=float(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:47:13) 
-- CODE:
var1=float(input("quantidade")
var2=float(input("valor unitario"))
var3=float(input("valor do frete"))
total= var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.174147
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:47:19) 
-- CODE:
var1=float(input("quantidade")
var2=float(input("valor unitario"))
var3=float(input("valor do frete"))
total= var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.140814
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:47:45) 
-- CODE:
var1=float(input("quantidade")
var2=float(input("valor unitario"))
var3=float(input("valor do frete"))
total= var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.162087
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:48) 
-- CODE:
var1=float(input("quantidade")
var2=float(input("valor unitario"))
var3=float(input("valor do frete"))
total= var1 * var2 + var3
print(total)
-- ERROR:
File "XXXX", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:48:41) 
-- CODE:
var1=float(input("quantidade")
var2=float(input("valor unitario"))
var3=float(input("valor do frete"))
total= var1 * var2 + var3
print(total)
-- ERROR:
File "XXXX", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:18) 
-- CODE:
var1=float(input("quantidade"))
var2=float(input("valor unitario"))
var3=float(input("valor do frete"))
total= var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.166408
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
